# cpplogging

./: .gitignore  CMakeLists.txt  Makefile  logging.cpp  logging.h  main.cpp  readme.md
